infrastructure/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enemy-soldiers-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enemy-soldiers-api
  template:
    metadata:
      labels:
        app: enemy-soldiers-api
    spec:
      containers:
        - name: api
          image: shmuelgross/enemy-soldiers-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
